# kex

./: .gitignore  .tool-versions  CLAUDE.md  CMakeLists.txt  Makefile  README.md  grammar.ebnf  immut.kex  kex
.github/workflows/: ci.yml
.vim/ftdetect/: kex.vim
docs/: atom-disentaglement-plan.md  beam-codegen-plan.md  compilation.md  compiled-eval.md  concurrency.md  effects-and-traits.md  error-handling.md  fiber-process-plan.md  functions.md  ir-format.md  kexm-plan.md  operators.md  plan-beam-codegen.md  plan-brew-distribution.md  plan-syntax-changes.md  plan_tey_pm.md  prelude-intrinsic-plan.md  purity.md  semantic-architecture-plan.md  stdlib-decoupling-plan.md  streams.md  testing.md  tooling.md  truthy-plan.md  type-system-plan.md  types.md
examples/: average.kex  binary_tree.kex  binary_tree.spec.expected  binary_tree.spec.kex  bindings.kex  blocks.kex  clauses.kex  closures.kex  collections.kex  compiled.kex  compiled_css.kex  compiled_sql.kex  console.kex  control.kex  curry.kex  destructuring.kex  env.kex  erlang_interop.kex  error_handling.kex  fact.kex  fib.kex  fizzbuzz.kex  fizzbuzz_abstraction.kex  fizzbuzz_functional.kex  fizzbuzz_pattern_matching.kex  fizzbuzz_recursive.kex  fizzbuzz_simple.kex  fns.kex  functions.kex  generics.kex  guards.kex  head.kex  hello.kex  html_dsl.kex  iflet.kex  interp.kex  io-math.kex  json_parser.kex  lambdas.kex  lesson-01.kex  (+40 more)
examples/aspirational/: algebra.kex  compiled_html.kex  compiled_router.kex  html_dsl.kex  proc_link.kex  proc_supervisor.kex
examples/beam/: chat_server_genserver.kex
examples/multifile/: main.kex
examples/multifile/lib/math/: shapes.kex  vec2.kex
runtime/src/: kex_file.erl  kex_http.erl  kex_intrinsic_char.erl  kex_intrinsic_console.erl  kex_intrinsic_directory.erl  kex_intrinsic_env.erl  kex_intrinsic_file.erl  kex_intrinsic_filehandle.erl  kex_intrinsic_float.erl  kex_intrinsic_fs.erl  kex_intrinsic_fun.erl  kex_intrinsic_http.erl  kex_intrinsic_integer.erl  kex_intrinsic_io.erl  kex_intrinsic_kex.erl  kex_intrinsic_list.erl  kex_intrinsic_map.erl  kex_intrinsic_math.erl  kex_intrinsic_number.erl  kex_intrinsic_process.erl  kex_intrinsic_range.erl  kex_intrinsic_stream.erl  kex_intrinsic_string.erl  kex_intrinsic_system.erl  kex_intrinsic_task.erl  kex_intrinsic_web.erl  kex_io.erl  kex_repl_driver.erl  kex_supervisor.erl  kex_task.erl  kex_test.erl
spec/: additional_improvements.kex  annotation_generics.expected  annotation_generics.kex  arithmetic.kex  arity_dispatch.expected  arity_dispatch.kex  at_any.expected  at_any.kex  at_field_shorthand.expected  at_field_shorthand.kex  break_next.expected  break_next.kex  char_predicates.expected  char_predicates.kex  char_type.expected  char_type.kex  collections.kex  comparision.expected  comparision.kex  compile_run.expected  compile_run.kex  console.expected  console.kex  crossfile_using.expected  crossfile_using.kex  either.expected  either.kex  env.expected  env.kex  env_param.expected  env_param.kex  erlang_interop.expected  erlang_interop.kex  error_annotation_arg_type.expected  error_annotation_arg_type.kex  error_annotation_arity_mismatch.expected  error_annotation_arity_mismatch.kex  error_annotation_return_type.expected  error_annotation_return_type.kex  error_bang_non_var_receiver.expected  (+158 more)
spec/lib/utils/: strings.kex
spec/prelude/: algebra.spec.kex  blankable.spec.kex  char.spec.kex  http.spec.kex  io.spec.kex  kex.spec.kex  list.spec.kex  map.spec.kex  math.spec.kex  number.spec.kex  optional.spec.kex  range.spec.kex  stream.spec.kex  string.spec.kex  truthyable.spec.kex  web_server.spec.kex
src/: main.cxx  wasm_repl.cxx
src/ast/: ast.hxx
src/beam/: beam_file.cxx  beam_file.hxx  collect_metadata.cxx  collect_metadata.hxx  etf.cxx  etf.hxx  kexi.cxx  kexi.hxx  kexi_registry.cxx  kexi_registry.hxx
src/codegen/: core_erlang.cxx  core_erlang.hxx
src/common/: artifact_versions.hxx  color.hxx  prelude_interfaces.hxx  prelude_loader.hxx  prelude_tiers.hxx  repl_commands.hxx  version.hxx
src/interpreter/: environment.cxx  environment.hxx  evaluator.cxx  evaluator.hxx  fiber.cxx  fiber.hxx  scheduler.cxx  scheduler.hxx  value.cxx  value.hxx
src/interpreter/stdlib/: adt.cxx  console.cxx  env.cxx  eval.cxx  file.cxx  http.cxx  integer.cxx  io.cxx  kex.cxx  list.cxx  map.cxx  math.cxx  number.cxx  parser.cxx  process.cxx  stream.cxx  string.cxx  test.cxx  web.cxx
src/ir/: emit_core.cxx  emit_core.hxx  ir.hxx  lower.cxx  lower.hxx
src/lexer/: lexer.cxx  lexer.hxx  token.cxx  token.hxx
src/module/: package_metadata.cxx  package_metadata.hxx  resolver.cxx  resolver.hxx
src/parser/: parser.cxx  parser.hxx
src/prelude/: algebra.kex  blankable.kex  console.kex  enumerable.kex  env.kex  errorable.kex  eval.kex  evaluator.kex  file.kex  http.kex  integer.kex  io.kex  kex.kex  list.kex  map.kex  math.kex  number.kex  optional.kex  parser.kex  process.kex  range.kex  stream.kex  string.kex  system.kex  test.kex  truthyable.kex  web_server.kex
src/semantic/: analyzer.cxx  analyzer.hxx  collect_pass.cxx  collect_pass.hxx  db.cxx  db.hxx  imported_interfaces.hxx  resolve_pass.cxx  resolve_pass.hxx  stdlib_signatures.cxx  stdlib_signatures.hxx  traits.cxx  traits.hxx  typechecker.cxx  typechecker.hxx  types.cxx  types.hxx
tests/: beam_test.cxx  codegen_test.cxx  color_cli_test.cxx  completion_test.cxx  dependency_layering_test.cmake  examples_test.cxx  installed_layout_test.cmake  interpreter_test.cxx  module_resolver_test.cxx  parser_test.cxx  prelude_artifact_test.cmake  repl_cli_test.cxx  repl_test.cxx  semantic_test.cxx  stdlib_decoupling_audit.cmake  test.hxx
tools/: dump_prelude_kexi.cxx
web/: index.html
